# xnatctl

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CLI_USABILITY_REVIEW.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  SECURITY.md  SKILL.md  XNATCTL_PLAN.md  install.sh  pyproject.toml  xnatctl.spec
.claude/rules/: git-workflow.md
.github/: .release-please-manifest.json  release-please.yml
.github/workflows/: ci.yml  docker.yml  publish.yml  release-please.yml  release.yml
docs/: administration.rst  changelog.rst  cli-reference.rst  concepts.rst  conf.py  configuration.rst  contributing.rst  dicom.rst  downloading.rst  index.rst  installation.rst  make.bat  quickstart.rst  skill.rst  transferring.rst  uploading.rst  workflows.rst  xnat-compatibility.rst
docs/api/: core.rst  models.rst  services.rst
docs/examples/: subject-rename-patterns.example.json
scripts/: apply_label_fixes.py  example_patterns.json
tests/: __init__.py  conftest.py  test_all_resource_download.py  test_apply_label_fixes_session_expiry.py  test_archive_poller.py  test_auth.py  test_cli.py  test_cli_admin.py  test_cli_api.py  test_cli_auth.py  test_cli_common.py  test_cli_config_cmd.py  test_cli_dicom_modify.py  test_cli_pipeline.py  test_cli_prearchive.py  test_cli_project.py  test_cli_resource.py  test_cli_scan.py  test_cli_session.py  test_cli_subject.py  test_cli_transfer.py  test_config.py  test_core_client_auth.py  test_dest_profile.py  test_downloads.py  test_exam_upload_classification.py  test_package.py  test_resource_upload.py  test_service_admin.py  test_service_hierarchy.py  test_service_pipelines.py  test_service_prearchive.py  test_service_projects.py  test_service_resources.py  test_service_scans.py  test_service_sessions.py  test_service_subjects.py  test_service_uploads_gradual_files.py  test_session_extract.py  test_session_refresher.py  (+14 more)
xnatctl/: __init__.py  __main__.py
xnatctl/cli/: __init__.py  admin.py  api.py  auth.py  common.py  config.py  config_cmd.py  dicom_cmd.py  main.py  pipeline.py  prearchive.py  project.py  resource.py  scan.py  session.py  subject.py
xnatctl/core/: __init__.py  auth.py  client.py  config.py  exam.py  exceptions.py  logging.py  output.py  state.py  timeouts.py  validation.py
xnatctl/models/: __init__.py  base.py  hierarchy.py  progress.py  project.py  resource.py  scan.py  session.py  subject.py  transfer.py
xnatctl/services/: __init__.py  admin.py  base.py  downloads.py  hierarchy.py  pipelines.py  prearchive.py  projects.py  resources.py  scans.py  sessions.py  subjects.py  uploads.py
xnatctl/services/transfer/: __init__.py  conflicts.py  discovery.py  executor.py  filter.py  orchestrator.py  (+2 more)
xnatctl/uploaders/: __init__.py  common.py  constants.py  dicom_store.py  parallel_rest.py
