[project]
name = "xnatctl"
version = "0.1.1"
description = "Modern CLI for XNAT neuroimaging server administration"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Ricky Wong", email = "rickywonglt15@outlook.com"},
]
license = {text = "MIT"}
keywords = ["xnat", "neuroimaging", "cli", "dicom", "medical-imaging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1.0",
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
xnatctl = "xnatctl.cli.main:main"

[project.optional-dependencies]
dicom = [
    "pydicom>=2.4.0",
    "pynetdicom>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    "pre-commit>=3.7.0",
    "types-PyYAML>=6.0.0",
]
docs = [
    "sphinx>=7.0",
    "furo>=2024.1.0",
    "sphinx-copybutton>=0.5.0",
    "myst-parser>=3.0.0",
]

[project.urls]
homepage = "https://github.com/rickyltwong/xnatctl"
repository = "https://github.com/rickyltwong/xnatctl.git"
documentation = "https://xnatctl.readthedocs.io"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["xnatctl"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mypy>=1.8.0",
    "pre-commit>=3.7.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
    "types-PyYAML>=6.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["xnatctl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true

[tool.coverage.run]
source = ["xnatctl"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
